update note and fix display of History of Timeline

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <title>History Timeline</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.css">
+  <!-- noUiSlider CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css">
+
+  <!-- noUiSlider JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
 
   <!-- Icons -->
@@ -872,6 +877,19 @@
 
     <!-- Article -->
     <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">918 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 918 - 1392 朝鲜高丽王朝</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
       <div class="content-left-container">
         <div class="century">916 AD</div>
         <div class="content-left">
@@ -1245,6 +1263,19 @@
           <a
             href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9:%E5%AE%97%E6%95%99%E6%94%B9%E9%9D%A9">Read
             more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1392 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1392 - 1897 朝鲜朝鲜王朝</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
       </div>
     </div>
     <!-- // Article -->
@@ -1675,6 +1706,37 @@
 
     <!-- Article -->
     <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">918 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1897 - 1910 朝鲜大韩帝国时期</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1910 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1910 - 1945 朝鲜日治时期</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+
+      <div class="meta-date">
+        <span class="date">1900</span>
+        <span class="month">AD</span>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
       <div class="content-left-container">
         <div class="century">1911 AD</div>
         <div class="content-left">
@@ -1710,10 +1772,6 @@
             more</a></span>
       </div>
 
-      <div class="meta-date">
-        <span class="date">1900</span>
-        <span class="month">AD</span>
-      </div>
     </div>
     <!-- // Article -->
 
@@ -1745,187 +1803,214 @@
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
+    </div>
 
-      <!-- Article -->
-      <div class="timeline-article">
-        <div class="content-right-container">
-          <div class="century">1926 AD</div>
-          <div class="content-right">
-            <h4 class="area">Asia</h4>
-            <h3>A.D. 1926 - 1989 日本昭和时代</h3>
-          </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1926 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1926 - 1989 日本昭和时代</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1927 AD</div>
+        <div class="content-left">
+          <h4 class="area">China</h4>
+          <h3>A.D. 1927-1937 国共第一次内战</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1929 AD</div>
+        <div class="content-right">
+          <h4 class="area">North America</h4>
+          <h3>A.D. 1929 - 1933 大萧条 Great Depression</h3>
+          <p>20世纪时间最长, 最深刻, 影响范围最广的经济衰退。</p>
+        </div>
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a
+            href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression:%5B%5B%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression%5D%5D">Read
+            more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+
+      <div class="content-right-container">
+        <div class="century">1939 AD</div>
+        <div class="content-right">
+          <h4 class="area">North America</h4>
+          <h3>A.D. 1939 - 1945 第二次世界大战 World War II</h3>
+          <p>人类史上规模最大的战争，人类死伤人数最多的战争。</p>
+        </div>
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a
+            href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II:%5B%5B%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II%5D%5D">Read
+            more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1941 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1941.12.7 日本偷袭珍珠港</h3>
         </div>
       </div>
-      <!-- // Article -->
+    </div>
+    <!-- // Article -->
 
-      <!-- Article -->
-      <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">1927 AD</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 1927-1937 国共第一次内战</h3>
-          </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1945 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1945.8.6, 1945.8.9 美国在广岛与长崎投下原子弹</h3>
         </div>
+      </div>
+    </div>
+    <!-- // Article -->
 
-        <!-- Article -->
-        <div class="timeline-article">
-          <div class="content-right-container">
-            <div class="century">1929 AD</div>
-            <div class="content-right">
-              <h4 class="area">North America</h4>
-              <h3>A.D. 1929 - 1933 大萧条 Great Depression</h3>
-              <p>20世纪时间最长, 最深刻, 影响范围最广的经济衰退。</p>
-            </div>
-            <span class="timeline-author">
-              <i class="material-symbols-outlined">travel_explore</i>
-              <a
-                href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression:%5B%5B%E5%A4%A7%E8%90%A7%E6%9D%A1%20Great%20Depression%5D%5D">Read
-                more</a></span>
-          </div>
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1945 AD</div>
+        <div class="content-left">
+          <h4 class="area">China</h4>
+          <h3>A.D. 1945-1950 国共第二次内战</h3>
         </div>
-        <!-- // Article -->
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
 
-        <!-- Article -->
-        <div class="timeline-article">
+    <!-- Article -->
+    <div class="timeline-article">
 
-          <div class="content-right-container">
-            <div class="century">1939 AD</div>
-            <div class="content-right">
-              <h4 class="area">North America</h4>
-              <h3>A.D. 1939 - 1945 第二次世界大战 World War II</h3>
-              <p>人类史上规模最大的战争，人类死伤人数最多的战争。</p>
-            </div>
-            <span class="timeline-author">
-              <i class="material-symbols-outlined">travel_explore</i>
-              <a
-                href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II:%5B%5B%E7%AC%AC%E4%BA%8C%E6%AC%A1%E4%B8%96%E7%95%8C%E5%A4%A7%E6%88%98%20World%20War%20II%5D%5D">Read
-                more</a></span>
-          </div>
+      <div class="content-right-container">
+        <div class="century">1947 AD</div>
+        <div class="content-right">
+          <h4 class="area">Europe</h4>
+          <h3>A.D. 1947 - 1991 冷战 Cold War</h3>
         </div>
-        <!-- // Article -->
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a
+            href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%86%B7%E6%88%98%20Cold%20War:%5B%5B%E5%86%B7%E6%88%98%20Cold%20War%5D%5D">Read
+            more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->
 
-        <!-- Article -->
-        <div class="timeline-article">
-          <div class="content-right-container">
-            <div class="century">1941 AD</div>
-            <div class="content-right">
-              <h4 class="area">Asia</h4>
-              <h3>A.D. 1941.12.7 日本偷袭珍珠港</h3>
-            </div>
-          </div>
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1948 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1948 - 1960 韩国 第一共和国时期</h3>
         </div>
-        <!-- // Article -->
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
 
-        <!-- Article -->
-        <div class="timeline-article">
-          <div class="content-right-container">
-            <div class="century">1945 AD</div>
-            <div class="content-right">
-              <h4 class="area">Asia</h4>
-              <h3>A.D. 1945.8.6, 1945.8.9 美国在广岛与长崎投下原子弹</h3>
-            </div>
-          </div>
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1949 AD</div>
+        <div class="content-left">
+          <h4 class="area">China</h4>
+          <h3>A.D. 1949 - recent 中华人民共和国</h3>
         </div>
-        <!-- // Article -->
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
 
-        <!-- Article -->
-        <div class="timeline-article">
-          <div class="content-left-container">
-            <div class="century">1945 AD</div>
-            <div class="content-left">
-              <h4 class="area">China</h4>
-              <h3>A.D. 1945-1950 国共第二次内战</h3>
-            </div>
-            <!-- <span class="timeline-author">John Doe</span> -->
-          </div>
-
-          <!-- Article -->
-          <div class="timeline-article">
-
-            <div class="content-right-container">
-              <div class="century">1947 AD</div>
-              <div class="content-right">
-                <h4 class="area">Europe</h4>
-                <h3>A.D. 1947 - 1991 冷战 Cold War</h3>
-              </div>
-              <span class="timeline-author">
-                <i class="material-symbols-outlined">travel_explore</i>
-                <a
-                  href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%86%B7%E6%88%98%20Cold%20War:%5B%5B%E5%86%B7%E6%88%98%20Cold%20War%5D%5D">Read
-                  more</a></span>
-            </div>
-          </div>
-          <!-- // Article -->
-
-          <!-- Article -->
-          <div class="timeline-article">
-            <div class="content-left-container">
-              <div class="century">1949 AD</div>
-              <div class="content-left">
-                <h4 class="area">China</h4>
-                <h3>A.D. 1949 - recent 中华人民共和国</h3>
-              </div>
-              <!-- <span class="timeline-author">John Doe</span> -->
-            </div>
-          </div>
-          <!-- // Article -->
-
-          <!-- Article -->
-          <div class="timeline-article">
-
-            <div class="content-right-container">
-              <div class="century">1986 AD</div>
-              <div class="content-right">
-                <h4 class="area">Europe</h4>
-                <h3>A.D. 1986 切尔诺贝利事故</h3>
-              </div>
-              <span class="timeline-author">
-                <i class="material-symbols-outlined">travel_explore</i>
-                <a
-                  href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster:%5B%5B%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster%5D%5D">Read
-                  more</a></span>
-            </div>
-          </div>
-          <!-- // Article -->
-
-          <!-- Article -->
-          <div class="timeline-article">
-            <div class="content-right-container">
-              <div class="century">1989 AD</div>
-              <div class="content-right">
-                <h4 class="area">Asia</h4>
-                <h3>A.D. 1989 - 2019 日本平成时代</h3>
-              </div>
-              <!-- <span class="timeline-author">John Doe</span> -->
-            </div>
-          </div>
-          <!-- // Article -->
-
-          <!-- Article -->
-          <div class="timeline-article">
-            <div class="content-right-container">
-              <div class="century">2019 AD</div>
-              <div class="content-right">
-                <h4 class="area">Asia</h4>
-                <h3>A.D. 2019 - recent 日本令和时代</h3>
-              </div>
-              <!-- <span class="timeline-author">John Doe</span> -->
-            </div>
-          </div>
-          <!-- // Article -->
-
-
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1970 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1970 韩国 推行“韩文专用”</h3>
+          <p>朴正熙政府宣布从1970年1月1日起推行“韩文专用”，小学阶段取消汉字教育，公文和教科书基本改为只用谚文，这是日常生活中汉字快速消失的关键阶段。<br>由于舆论反弹，1972 年又在中学、高中恢复“汉文”课程，但社会整体已经以谚文为主，汉字只在少数场合保留。</p>
         </div>
-        <div class="timeline-end">End</div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+
+      <div class="content-right-container">
+        <div class="century">1986 AD</div>
+        <div class="content-right">
+          <h4 class="area">Europe</h4>
+          <h3>A.D. 1986 切尔诺贝利事故</h3>
+        </div>
+        <span class="timeline-author">
+          <i class="material-symbols-outlined">travel_explore</i>
+          <a
+            href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster:%5B%5B%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster%5D%5D">Read
+            more</a></span>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1989 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1989 - 2019 日本平成时代</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">2019 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 2019 - recent 日本令和时代</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+
+    </div>
+    <div class="timeline-end">End</div>
   </section>
   <!-- // Vertical Timeline -->
 
   <script src="dropdown-filter.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/nouislider/distribute/nouislider.min.js"></script>
 
 </body>
 
