--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>History Timeline</title>
 
+  <base target="_blank">
+
   <!-- noUiSlider CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css">
 
