update css style of history timeline

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -29,7 +29,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap"
+    rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
   <!-- // Fonts -->
@@ -62,7 +63,7 @@
           </div>
           <div class="date-input-group">
             <label>End:</label>
-            <input type="text" id="endDateInput" placeholder="e.g., 2000 or 2000 AD" />
+            <input type="text" id="endDateInput" placeholder="e.g., 2050 or 2050 AD" />
           </div>
         </div>
         <!-- Area Filter -->
@@ -190,7 +191,7 @@
           <div class="century">2685 BC</div>
           <div class="content-right">
             <h4 class="area">Africa</h4>
-            <h3>2685 B.C. - 2180 B.C. 埃及“古王国” 金字塔时期</h3>
+            <h3>2685 B.C. - 2180 B.C. 🇪🇬埃及“古王国” 金字塔时期</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
           </div>
           <!-- <span class="timeline-author">Africa</span> -->
@@ -270,7 +271,7 @@
           <div class="century">1000 BC</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>1000 B.C. - A.D. 250 日本弥生时代</h3>
+            <h3>1000 B.C. - A.D. 250 🇯🇵日本弥生时代</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -580,7 +581,7 @@
           <div class="century">250 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 250 - 592 日本古坟时代</h3>
+            <h3>A.D. 250 - 592 🇯🇵日本古坟时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -694,7 +695,7 @@
           <div class="century">481 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
-            <h3>A.D. 481 - 843 法兰克王国诞生</h3>
+            <h3>A.D. 481 - 843 🇫🇷法兰克王国诞生</h3>
             <span class="timeline-author">
               <i class="material-symbols-outlined">link</i>
               <a
@@ -729,7 +730,7 @@
           <div class="century">592 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 592 - 710 日本飞鸟时代</h3>
+            <h3>A.D. 592 - 710 🇯🇵日本飞鸟时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -781,8 +782,8 @@
           <div class="century">645 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 645 日本大化改新</h3>
-            <p>645年日本大和王权实行的一系列社会政治改革。其主要内容是废除当时豪族专政的制度，并效法中国唐朝体制成立中央集权国家，对日后日本历史发展影响深远。</p>
+            <h3>A.D. 645 🇯🇵日本大化改新</h3>
+            <p>645年🇯🇵日本大和王权实行的一系列社会政治改革。其主要内容是废除当时豪族专政的制度，并效法中国唐朝体制成立中央集权国家，对日后🇯🇵日本历史发展影响深远。</p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -796,7 +797,7 @@
           <div class="century">710 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 710 - 794 日本奈良时代</h3>
+            <h3>A.D. 710 - 794 🇯🇵日本奈良时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -814,7 +815,7 @@
           <div class="century">794 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 794 - 1185 日本平安时代</h3>
+            <h3>A.D. 794 - 1185 🇯🇵日本平安时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -911,7 +912,7 @@
         <div class="century">927 AD</div>
         <div class="content-right">
           <h4 class="area">Europe</h4>
-          <h3>A.D. 927 英格兰统一</h3>
+          <h3>A.D. 927 🏴󠁧󠁢󠁥󠁮󠁧󠁿英格兰统一</h3>
           <p>英格兰王国诞生</p>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
@@ -975,7 +976,7 @@
         <div class="century">1068 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1068 - 1185 日本院政时代</h3>
+          <h3>A.D. 1068 - 1185 🇯🇵日本院政时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1108,7 +1109,7 @@
         <div class="century">1185 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1185 - 1333 日本镰仓时代</h3>
+          <h3>A.D. 1185 - 1333 🇯🇵日本镰仓时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1196,7 +1197,7 @@
         <div class="century">1336 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1336 - 1392 日本南北朝时代</h3>
+          <h3>A.D. 1336 - 1392 🇯🇵日本南北朝时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1209,7 +1210,7 @@
         <div class="century">1336 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1336 - 1573 日本室町时代</h3>
+          <h3>A.D. 1336 - 1573 🇯🇵日本室町时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1292,7 +1293,7 @@
           <div class="century">1467 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 1467 - 1590 日本战国时代</h3>
+            <h3>A.D. 1467 - 1590 🇯🇵日本战国时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -1412,7 +1413,7 @@
         <div class="century">1573 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1573 - 1603 日本织丰政权</h3>
+          <h3>A.D. 1573 - 1603 🇯🇵日本织丰政权</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1425,7 +1426,7 @@
         <div class="century">1603 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1603 - 1868 日本江户时代</h3>
+          <h3>A.D. 1603 - 1868 🇯🇵日本江户时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1540,7 +1541,7 @@
         <div class="century">1776 AD</div>
         <div class="content-right">
           <h4 class="area">North America</h4>
-          <h3>A.D. 1776 美国宣布独立</h3>
+          <h3>A.D. 1776 🇺🇸美国宣布独立</h3>
         </div>
       </div>
     </div>
@@ -1650,7 +1651,7 @@
         <div class="century">1853 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1853/1858 日本明治维新</h3>
+          <h3>A.D. 1853/1858 🇯🇵日本明治维新</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1663,7 +1664,7 @@
         <div class="century">1868 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1868 - 1912 日本明治时代</h3>
+          <h3>A.D. 1868 - 1912 🇯🇵日本明治时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1723,7 +1724,7 @@
         <div class="century">1911 AD</div>
         <div class="content-left">
           <h4 class="area">China</h4>
-          <h3>A.D. 1911 - 1949 中华民国</h3>
+          <h3>A.D. 1911 - 1949 🇹🇼中华民国</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1734,7 +1735,7 @@
           <div class="century">1912 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
-            <h3>A.D. 1912 - 1926 日本大正时代</h3>
+            <h3>A.D. 1912 - 1926 🇯🇵日本大正时代</h3>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
@@ -1791,7 +1792,7 @@
         <div class="century">1926 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1926 - 1989 日本昭和时代</h3>
+          <h3>A.D. 1926 - 1989 🇯🇵日本昭和时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -1851,7 +1852,7 @@
         <div class="century">1941 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1941.12.7 日本偷袭珍珠港</h3>
+          <h3>A.D. 1941.12.7 🇯🇵日本偷袭珍珠港</h3>
         </div>
       </div>
     </div>
@@ -1910,23 +1911,10 @@
     <!-- Article -->
     <div class="timeline-article">
       <div class="content-right-container">
-        <div class="century">1950 AD</div>
-        <div class="content-right">
-          <h4 class="area">Asia</h4>
-          <h3>A.D. 1950 - 1953 朝鲜战争</h3>
-        </div>
-        <!-- <span class="timeline-author">John Doe</span> -->
-      </div>
-    </div>
-    <!-- // Article -->
-
-    <!-- Article -->
-    <div class="timeline-article">
-      <div class="content-right-container">
         <div class="century">1948 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1948 - 1960 韩国 第一共和国时期</h3>
+          <h3>A.D. 1948 - 1960 🇰🇷韩国 第一共和国时期</h3>
           <p>初建时代</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -1941,6 +1929,19 @@
         <div class="content-left">
           <h4 class="area">China</h4>
           <h3>A.D. 1949 - recent 中华人民共和国</h3>
+        </div>
+        <!-- <span class="timeline-author">John Doe</span> -->
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1950 AD</div>
+        <div class="content-right">
+          <h4 class="area">Asia</h4>
+          <h3>A.D. 1950 - 1953 朝鲜战争</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -2048,7 +2049,7 @@
         <div class="century">1960 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1960 - 1961 韩国 第二共和国时期</h3>
+          <h3>A.D. 1960 - 1961 🇰🇷韩国 第二共和国时期</h3>
           <p>短暂的议会制共和国</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -2062,7 +2063,7 @@
         <div class="century">1963 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1963 - 1972 韩国 第三共和国时期</h3>
+          <h3>A.D. 1963 - 1972 🇰🇷韩国 第三共和国时期</h3>
           <p>前军政府时代</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -2091,7 +2092,7 @@
         <div class="century">1970 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1970 韩国 推行“韩文专用”</h3>
+          <h3>A.D. 1970 🇰🇷韩国 推行“韩文专用”</h3>
           <p>朴正熙政府宣布从1970年1月1日起推行“韩文专用”，小学阶段取消汉字教育，公文和教科书基本改为只用谚文，这是日常生活中汉字快速消失的关键阶段。</p>
           <p>由于舆论反弹，1972年又在中学、高中恢复“汉文”课程，但社会整体已经以谚文为主，汉字只在少数场合保留。</p>
         </div>
@@ -2106,7 +2107,7 @@
         <div class="century">1972 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1972 - 1981 韩国 第四共和国时期</h3>
+          <h3>A.D. 1972 - 1981 🇰🇷韩国 第四共和国时期</h3>
           <p>维新时代</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -2120,7 +2121,7 @@
         <div class="century">1981 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1981 - 1988 韩国 第五共和国时期</h3>
+          <h3>A.D. 1981 - 1988 🇰🇷韩国 第五共和国时期</h3>
           <p>全斗焕军政独裁时期</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -2151,7 +2152,7 @@
         <div class="century">1988 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1988 - recent 韩国 第六共和国时期</h3>
+          <h3>A.D. 1988 - recent 🇰🇷韩国 第六共和国时期</h3>
           <p>民主宪政时代</p>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
@@ -2180,7 +2181,7 @@
         <div class="century">1989 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 1989 - 2019 日本平成时代</h3>
+          <h3>A.D. 1989 - 2019 🇯🇵日本平成时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
@@ -2193,7 +2194,7 @@
         <div class="century">2019 AD</div>
         <div class="content-right">
           <h4 class="area">Asia</h4>
-          <h3>A.D. 2019 - recent 日本令和时代</h3>
+          <h3>A.D. 2019 - recent 🇯🇵日本令和时代</h3>
         </div>
         <!-- <span class="timeline-author">John Doe</span> -->
       </div>
