--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -58,11 +58,11 @@
         </div>
         <div class="date-inputs-container">
           <div class="date-input-group">
-            <label>Start:</label>
+            <label>From</label>
             <input type="text" id="startDateInput" placeholder="e.g., -3000 or 3000 BC" />
           </div>
           <div class="date-input-group">
-            <label>End:</label>
+            <label>To</label>
             <input type="text" id="endDateInput" placeholder="e.g., 2050 or 2050 AD" />
           </div>
         </div>
