update history timeline style

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -58,12 +58,11 @@
         </div>
         <div class="date-inputs-container">
           <div class="date-input-group">
-            <label>From</label>
-            <input type="text" id="startDateInput" placeholder="e.g., -3000 or 3000 BC" />
+            <input type="text" id="startDateInput" placeholder="-3000/3000 BC" />
           </div>
           <div class="date-input-group">
-            <label>To</label>
-            <input type="text" id="endDateInput" placeholder="e.g., 2050 or 2050 AD" />
+            <label><i class="fa-solid fa-arrow-right"></i></label>
+            <input type="text" id="endDateInput" placeholder="2050/2050 AD" />
           </div>
         </div>
         <!-- Area Filter -->
