--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -292,7 +292,7 @@
           </div>
 
         </div>
-        
+
         <div class="content-right-container">
           <div class="century">1000 BC</div>
           <div class="content-right">
@@ -300,7 +300,7 @@
               <span class="period">1000 B.C. - A.D. 250</span>
               <h4 class="area">Asia</h4>
             </div>
-            <h3>🇯🇵日本弥生时代</h3>            
+            <h3>🇯🇵日本弥生时代</h3>
           </div>
         </div>
         <div class="meta-date">
@@ -373,7 +373,7 @@
               <h4 class="area">China</h4>
               <span class="period">500 B.C.</span>
             </div>
-              <h3>金属货币出现</h3>
+            <h3>金属货币出现</h3>
           </div>
 
           <div class="meta-date">
@@ -1794,7 +1794,7 @@
       <div class="content-right-container">
         <div class="century">1765 AD</div>
         <div class="content-right">
-          <div class="timeAndArea"> 
+          <div class="timeAndArea">
             <span class="period">A.D. 1765 - 1783</span>
             <h4 class="area">North America</h4>
           </div>
@@ -1931,6 +1931,8 @@
     </div>
     <!-- // Article -->
 
+
+
     <!-- Article -->
     <div class="timeline-article">
       <div class="content-left-container">
@@ -1946,16 +1948,18 @@
     </div>
     <!-- // Article -->
 
+
+
     <!-- Article -->
     <div class="timeline-article">
       <div class="content-right-container">
-        <div class="century">1853 AD</div>
+        <div class="century">1868 AD</div>
         <div class="content-right">
           <div class="timeAndArea">
-            <span class="period">A.D. 1853/1858</span>
+            <span class="period">A.D. 1868 - 1912</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本明治维新</h3>
+          <h3>🇯🇵日本明治时代</h3>
         </div>
 
       </div>
@@ -1968,10 +1972,10 @@
         <div class="century">1868 AD</div>
         <div class="content-right">
           <div class="timeAndArea">
-            <span class="period">A.D. 1868 - 1912</span>
+            <span class="period">A.D. 1868</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本明治时代</h3>
+          <h3>🇯🇵日本明治维新</h3>
         </div>
 
       </div>
