--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -627,6 +627,22 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">146 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 146 - 708</span>
+              <h4 class="area">Asia</h4>
+            </div>
+            <h3>🇯🇵日本 大和时代 Yamato period</h3>
+          </div>
+
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-left-container">
           <div class="century">220 AD</div>
           <div class="content-left">
@@ -832,7 +848,7 @@
               <span class="period">A.D. 592 - 710</span>
               <h4 class="area">Asia</h4>
             </div>
-            <h3>🇯🇵日本飞鸟时代</h3>
+            <h3>🇯🇵日本 飞鸟时代 Asuka period</h3>
           </div>
 
         </div>
@@ -911,7 +927,7 @@
               <span class="period">A.D. 710 - 794</span>
               <h4 class="area">Asia</h4>
             </div>
-            <h3>🇯🇵日本奈良时代</h3>
+            <h3>🇯🇵日本 奈良时代 Nara period</h3>
           </div>
 
         </div>
@@ -932,7 +948,7 @@
               <span class="period">A.D. 794 - 1185</span>
               <h4 class="area">Asia</h4>
             </div>
-            <h3>🇯🇵日本平安时代</h3>
+            <h3>🇯🇵日本 平安时代 Heian period</h3>
           </div>
 
         </div>
@@ -1288,7 +1304,7 @@
             <span class="period">A.D. 1185 - 1333</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本镰仓时代</h3>
+          <h3>🇯🇵日本 镰仓时代 Kamakura period</h3>
         </div>
 
       </div>
@@ -1412,7 +1428,23 @@
             <span class="period">A.D. 1336 - 1573</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本室町时代</h3>
+          <h3>🇯🇵日本 室町时代 Muromachi period</h3>
+        </div>
+
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1334 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1334 - 1336</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇯🇵日本 建武新政 Kenmu Restoration</h3>
         </div>
 
       </div>
@@ -1428,7 +1460,7 @@
             <span class="period">A.D. 1346 - 1353</span>
             <h4 class="area">Europe</h4>
           </div>
-          <h3>黑死病</h3>
+          <h3>黑死病 Black Death</h3>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
             <a
@@ -1673,13 +1705,29 @@
     <!-- Article -->
     <div class="timeline-article">
       <div class="content-right-container">
+        <div class="century">1576 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1576 - 1603</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇯🇵日本 安土桃山时代 Azuchi-Momoyama period</h3>
+        </div>
+
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
         <div class="century">1603 AD</div>
         <div class="content-right">
           <div class="timeAndArea">
             <span class="period">A.D. 1603 - 1868</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本江户时代</h3>
+          <h3>🇯🇵日本江户时代 Edo period</h3>
         </div>
 
       </div>
@@ -1738,7 +1786,7 @@
             <span class="period">A.D. 1688 - 1689</span>
             <h4 class="area">Europe</h4>
           </div>
-          <h3>光荣革命</h3>
+          <h3>🇬🇧英国 光荣革命</h3>
           <p>这场政变以不流血著名, 诞生了 1689年权利法案, 是英国君主立宪制形成的重要事件。</p>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
@@ -1895,7 +1943,7 @@
             <span class="period">A.D. 1837 - 1901</span>
             <h4 class="area">Europe</h4>
           </div>
-          <h3>维多利亚时期 Victorian era</h3>
+          <h3>🇬🇧英国 维多利亚时期 Victorian era</h3>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
             <a
@@ -1959,7 +2007,7 @@
             <span class="period">A.D. 1868 - 1912</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本明治时代</h3>
+          <h3>🇯🇵日本明治时代 Meiji era</h3>
         </div>
 
       </div>
@@ -1976,6 +2024,10 @@
             <h4 class="area">Asia</h4>
           </div>
           <h3>🇯🇵日本明治维新</h3>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#武士革命:武士革命">Read
+              More</a></span>
         </div>
 
       </div>
@@ -2062,7 +2114,12 @@
               <span class="period">A.D. 1912 - 1926</span>
               <h4 class="area">Asia</h4>
             </div>
-            <h3>🇯🇵日本大正时代</h3>
+            <h3>🇯🇵日本大正时代 Taisho era</h3>
+            <span class="timeline-author">
+              <i class="material-symbols-outlined">link</i>
+              <a
+                href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#大正时代%20Taisho%20era%201913-1926:[[大正时代%20Taisho%20era%201913-1926]%5d">Read
+                More</a></span>
           </div>
 
         </div>
@@ -2134,7 +2191,12 @@
             <span class="period">A.D. 1926 - 1989</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本昭和时代</h3>
+          <h3>🇯🇵日本昭和时代 Showa era</h3>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a
+              href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#昭和时代%20Showa%20era%201926-1989:[[昭和时代%20Showa%20era%201926-1989]%5d">Read
+              More</a></span>
         </div>
 
       </div>
@@ -2318,7 +2380,7 @@
             <span class="period">A.D. 1950 - 1953</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>朝鲜战争</h3>
+          <h3>朝鲜战争 Korean War</h3>
         </div>
       </div>
     </div>
@@ -2353,7 +2415,7 @@
             <span class="period">A.D. 1955 - 1975</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>越南战争</h3>
+          <h3>越南战争 Vietnam War</h3>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
             <a href="https://zh.wikipedia.org/zh-hans/越南战争#过程">Read More</a></span>
@@ -2613,7 +2675,12 @@
             <span class="period">A.D. 1989 - 2019</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本平成时代</h3>
+          <h3>🇯🇵日本平成时代 Heisei era</h3>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a
+              href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#平成时代%20Heisei%20era%201989-2019:[[平成时代%20Heisei%20era%201989-2019]%5d">Read
+              More</a></span>
         </div>
 
       </div>
@@ -2629,7 +2696,7 @@
             <span class="period">A.D. 2019 - recent</span>
             <h4 class="area">Asia</h4>
           </div>
-          <h3>🇯🇵日本令和时代</h3>
+          <h3>🇯🇵日本令和时代 Reiwa era</h3>
         </div>
 
       </div>
